2003-09-23  Per Bothner  <per@bothner.com>

	* build.xml (build.selectjava):  Add FVector.java and LList.java.

2003-09-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_LINK_FILES):  Add gnu/xquery/testsuite/outline.xml.

2003-09-08  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Resolve hygiene using
	getOriginalRef *before* resolving namespace prefix.
	Fixes Savannah bug #5113.

2003-09-03  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Set Compilation.defaultCallConvention.

2003-08-20  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Change definitions
	of positive? and modulo.
	* kawa/standard/modulo.java:  Remove - implemented in kawa.lib.numbers.
	* kawa/standard/positive_p.java:  Likewise.
	* kawa/standard/Makefile.am (java_sources):  Update accordingly.

	* kawa/standard/string2number.java (parse):  Pass new exactness
	parameter.

2003-08-06  Per Bothner  <per@bothner.com>

	* kawa/standard/TracedProcedure.java (indentation):  Initialize using
	Symbol.unInterned, matching 2003-03-15 gnu/mapping/Symbol.java change.

2003-08-03  Per Bothner  <per@bothner.com>

	* configure.in:  Add AC_LINK_FILES for report1.xml.in.

2003-08-01  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody):  Use new setCoercedReturnValue
	helper method in Convert.

2003-07-22  Per Bothner  <per@bothner.com>

	* configure.in (AC_OUTPUT):  Add Makefiles in gnu/kawa/models
	and gnu/kawa/swingviews.

2003-07-15  Chris Dean  <Chris.Dean@sokitomi.com>

	* kawa/standard/Scheme.java (initScheme): Add invoke-special.

2003-07-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Do followAliases
	when checking for a namespace-using name.

2003-07-10  Chris Dean  <Chris.Dean@sokitomi.com>

	* kawa/standard/syntax_rules.java (rewriteForm):  Allow Keywords among
	the literals

2003-06-14  Per Bothner  <per@bothner.com>
